--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      padding: 10px;
+    }
+
+    h1 {
+      margin-top: 20px;
     }
 
     canvas {
@@ -23,7 +28,7 @@
     }
 
     .controls {
-      margin-top: 10px;
+      margin-top: 20px;
       display: grid;
       grid-template-areas:
         ". up ."
@@ -40,6 +45,7 @@
       border-radius: 10px;
       width: 60px;
       height: 60px;
+      cursor: pointer;
     }
 
     .up    { grid-area: up; }
@@ -49,7 +55,7 @@
   </style>
 </head>
 <body>
-  <h1>🐍 Jhales Santiago</h1>
+  <h1>🐍 Jhales & Sofia</h1>
   <canvas id="game"></canvas>
 
   <div class="controls">
@@ -63,7 +69,7 @@
     const canvas = document.getElementById("game");
     const ctx = canvas.getContext("2d");
 
-    // Responsive sizing
+    // Make canvas responsive to screen size (using 80% of the smaller dimension)
     const screenSize = Math.min(window.innerWidth, window.innerHeight) * 0.8;
     canvas.width = screenSize;
     canvas.height = screenSize;
@@ -77,10 +83,21 @@
     let score = 0;
     let gameStarted = false;
 
+    // Starting speed (in milliseconds per frame)
+    let speed = 200;
+    let gameInterval;
+
+    // Function to (re)start the game loop at the current speed.
+    function startGameLoop() {
+      clearInterval(gameInterval);
+      gameInterval = setInterval(gameLoop, speed);
+    }
+
     function handleDirection(dir) {
       if (!gameStarted) {
         gameStarted = true;
-        velocity = { x: 1, y: 0 };
+        velocity = { x: 1, y: 0 }; // Start moving right
+        startGameLoop();
       }
 
       if (dir === "up" && velocity.y === 0) velocity = { x: 0, y: -1 };
@@ -89,11 +106,13 @@
       if (dir === "right" && velocity.x === 0) velocity = { x: 1, y: 0 };
     }
 
+    // Add touch controls
     document.querySelector(".up").onclick = () => handleDirection("up");
     document.querySelector(".down").onclick = () => handleDirection("down");
     document.querySelector(".left").onclick = () => handleDirection("left");
     document.querySelector(".right").onclick = () => handleDirection("right");
 
+    // Also add keyboard controls
     document.addEventListener("keydown", (e) => {
       if (e.key === "ArrowUp") handleDirection("up");
       if (e.key === "ArrowDown") handleDirection("down");
@@ -102,57 +121,78 @@
     });
 
     function gameLoop() {
-      if (!gameStarted) {
-        draw();
-        return;
-      }
-
       const head = { x: snake[0].x + velocity.x, y: snake[0].y + velocity.y };
 
+      // Check game over conditions:
       if (
         head.x < 0 || head.x >= tileCount ||
         head.y < 0 || head.y >= tileCount ||
         snake.some(segment => segment.x === head.x && segment.y === head.y)
       ) {
         alert("Game Over! Score: " + score);
-        snake = [{ x: 10, y: 10 }];
-        velocity = { x: 0, y: 0 };
-        food = { x: Math.floor(Math.random() * tileCount), y: Math.floor(Math.random() * tileCount) };
-        score = 0;
-        gameStarted = false;
+        resetGame();
         return;
       }
 
-      snake.unshift(head);
+      snake.unshift(head); // add new head
 
+      // Check if snake eats food
       if (head.x === food.x && head.y === food.y) {
         score++;
-        food = { x: Math.floor(Math.random() * tileCount), y: Math.floor(Math.random() * tileCount) };
+        food = { 
+          x: Math.floor(Math.random() * tileCount), 
+          y: Math.floor(Math.random() * tileCount)
+        };
+
+        // Adjust speed based on score thresholds:
+        if (score === 10) {
+          speed = 150;
+          startGameLoop();
+        } else if (score === 30) {
+          speed = 100;
+          startGameLoop();
+        }
       } else {
-        snake.pop();
+        snake.pop(); // remove tail if no food eaten
       }
 
       draw();
     }
 
     function draw() {
+      // Clear the canvas
       ctx.fillStyle = "#111";
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
+      // Draw the snake
       ctx.fillStyle = "#0f0";
       snake.forEach(segment => {
         ctx.fillRect(segment.x * gridSize, segment.y * gridSize, gridSize - 1, gridSize - 1);
       });
 
+      // Draw the food
       ctx.fillStyle = "#f00";
       ctx.fillRect(food.x * gridSize, food.y * gridSize, gridSize - 1, gridSize - 1);
 
+      // Draw the score
       ctx.fillStyle = "#fff";
       ctx.font = "16px sans-serif";
       ctx.fillText("Score: " + score, 10, 20);
     }
 
-    setInterval(gameLoop, 100);
+    function resetGame() {
+      clearInterval(gameInterval);
+      snake = [{ x: 10, y: 10 }];
+      velocity = { x: 0, y: 0 };
+      score = 0;
+      food = { x: Math.floor(Math.random() * tileCount), y: Math.floor(Math.random() * tileCount) };
+      gameStarted = false;
+      speed = 200;
+      draw();
+    }
+
+    // Start with an initial board draw
+    draw();
   </script>
 </body>
 </html>
